Implement sbt buildSmallJdkForRelease command